# gen-ai

./: .gitignore  langchain.md  opensource_hf_model.py  pyproject.toml  python.md  readme.md  requirements.txt  weather_agent.py
RAG/: docker-compose.yml  index.py  retrieval.py
